test/syntax/fail/not_boolean_like_in_if_too_many_constrs.sync
type mytype =
  | A
  | B
  | C

let f (s : mytype) =
  if s then 0
  else 0
